# ds-sandbox

./: .gitignore  LICENSE  PROPOSAL.md  README.md  pyproject.toml
docs/: QUICKSTART.md
examples/: basic_execution.py
src/ds_sandbox/: __init__.py  config.py  errors.py  manager.py  path_utils.py  sandbox.py  template.py  types.py
src/ds_sandbox/api/: __init__.py  mcp.py  rest.py  sdk.py
src/ds_sandbox/backends/: __init__.py  base.py  docker.py  local.py
src/ds_sandbox/data/: registry.py
src/ds_sandbox/execution/: __init__.py  router.py  tracker.py
src/ds_sandbox/monitoring/: __init__.py  metrics.py
src/ds_sandbox/sandbox/: __init__.py  commands.py  files.py  result.py  sandbox.py
src/ds_sandbox/security/: __init__.py  audit.py  policies.py  scanner.py
src/ds_sandbox/storage/: __init__.py  volumes.py
src/ds_sandbox/template_manager/: __init__.py  manager.py
src/ds_sandbox/utils/: __init__.py  logger.py
src/ds_sandbox/workspace/: __init__.py  manager.py  service.py
tests/: __init__.py  conftest.py  test_api.py  test_docker.py  test_local_backend.py  test_manager.py  test_scanner.py  test_security.py  test_streaming.py  test_workspace.py
