[project]
name = "ds-sandbox"
version = "1.0.0"
description = "General-purpose sandbox for AI agent code execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "DSLighting Team"}]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiofiles>=23.0.0",
    "docker>=7.0.0",
    "anyio>=4.0.0",
    "aiohttp>=3.9.0",
    "uvicorn>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/usail-hkust/ds-sandbox"

[project.scripts]
ds-sandbox-api = "ds_sandbox.api.rest:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_sandbox"]

[tool.hatch.build.targets.sdist]
packages = ["src/ds_sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ds_sandbox"]
